Fixed perfect-scrollbar perfect

--- a/demo2/assets/css/demo-all.css
+++ b/demo2/assets/css/demo-all.css
@@ -8,7 +8,6 @@
 }
 html {
 	min-height: 100%;			/* 背景图片撑开，否则窄屏下方有白边 */
-	padding: 0px!important;		/* PerfectScrollbar用，直接替换html的滚动条 */
 }
 body {
 	min-height: 100%;
@@ -16,6 +15,16 @@ body {
     background-size: cover;
 	background-position: 90% 20%;
 	color: #eee;
+
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+.psb-container {
+	padding: 0px!important;		/* PerfectScrollbar用，直接替换html的滚动条 */
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 a[disabled], a.disabled {
 	text-decoration: none;
